[tool.poetry]
name = "dsa"
version = "0.1.0"
description = "A project for data structures and algorithms in Python."
authors = ["Ryan Rodriguez"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/friend0/dsa"
homepage = "https://github.com/friend0/dsa"
keywords = ["data structures", "algorithms", "python", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
yapf = "^0.32"
flake8 = "^4.0"
mypy = "^0.910"
isort = "^5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
